[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umbi"
version = "0.2.9"
description = "Library for input/output of transition systems in a unified Markov binary (UMB) format."
readme = "README.md"
authors = [{name = "Roman Andriushchenko", email = "roman.andriu@gmail.com"}]
license = "MIT"
dependencies = [
  "click",
  "marshmallow",
  "marshmallow_oneofschema",
  "bitstring",
  "inflect",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/randriu/umbi"

[project.optional-dependencies]
dev = [
  "pytest",
  "pyright",
  "ruff",
  "toml-sort",
  "uv",
  "pre-commit",
  "pip-tools",
  "bump-my-version",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["umbi*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
# This allows importing examples/ in the tests
pythonpath = ["."]

[project.scripts]
umbi = "umbi.__main__:main"

[tool.umbi]
format_version = 1
format_revision = 0

[tool.bumpversion]
current_version = "0.2.9"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"
message = "bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
line-length = 120
exclude = [
  "build",
  "dist",
  ".venv",
  "venv",
  ".git",
  "__pycache__",
]
target-version = "py312"

[tool.ruff.lint]
select = ["I"]  # enable isort (import sorting) rules

[tool.pyright]
include = [
  "umbi",
  # "tests",
  # "examples",
]
exclude = [
  "build",
  "**/__pycache__",
  "umbi.egg-info",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
reportImportCycles = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
